# unified

./: .env.dev  .env.test  .gitignore  .poststack.yml  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  conftest.py  development-journal.md  dns_mail_test_results.json  dns_mail_test_results_report.txt  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  test_framework_validation_report.md  test_import.py  test_performance_metrics.py  unified-cli
.github/workflows/: ci.yml
containers/: __init__.py
containers/apache/: Dockerfile  apache-pod.yaml  apache-pod.yaml.j2  apache-supervisor.conf  apache-wrapper.sh  apache2.conf.template  entrypoint.sh  generate-certificate.sh
containers/apache/sites-available/: unified-ssl.conf.template  unified.conf.template
containers/base-debian/: Dockerfile
containers/dns/: Dockerfile  dns-pod.yaml.j2  entrypoint.sh  manage-dkim-records.py  named.conf  named.conf.local  named.conf.options
containers/dns/test/: conftest.py  test_connectivity.py
containers/dns/zones/: mail-domain.zone.template  rpz.zone
containers/fail2ban/: Dockerfile  fail2ban-pod.yaml.j2
containers/fail2ban/config/: fail2ban.conf  jail.conf  jail.local
containers/fail2ban/scripts/: entrypoint.sh
containers/mail/: Dockerfile  __init__.py  certificate-watcher.py  configure-ssl.sh  dovecot-sql.conf.template  dovecot.conf.template  entrypoint.sh  generate-dkim-keys.sh  mail-pod.yaml  mail-pod.yaml.j2  reload-ssl.sh
containers/mail/opendkim/: key.table.template  opendkim.conf.template  signing.table.template  trusted.hosts.template
containers/postgres/: Dockerfile  entrypoint.sh  pg_hba.conf.template  postgres-pod.yaml  postgres-pod.yaml.j2  postgresql.conf.template
containers/poststack/: Dockerfile
containers/volume-setup/: Dockerfile  setup-volumes.sh  uid-mapping.sh  volume-setup-pod.yaml  volume-setup-pod.yaml.j2
deploy/: apache-pod.yaml  dovecot-pod.yaml  postgres-pod.yaml
docs/: UX-improvements-round1-config-docs.md  UX-improvements-round2-postfix-lessons-learned.md  dns-mail-postgres-integration.md  dns-service-architecture.md  key-ingredients.md  mail-container-setup.md  performance-baselines.md  postgresql-configuration.md  postgresql-dns-schema.md  test-framework.md  todo.md  transition-to-docker-compose.md  unified-user-schema-v1.md
environments/dev/: .env.dev  docker-compose.dev.yml
environments/staging/: .env.staging
environments/test/: .env.test
environments/test-data/: README.md
examples/: environment_demo.py
logs/: build-summary-20250717-181435.json  build-summary-20250717-181501.json  build-summary-20250717-235117.json  build-summary-20250717-235145.json  build-summary-20250717-235153.json  build-summary-20250717-235155.json  build-summary-20250717-235156.json  build-summary-20250717-235158.json  build-summary-20250717-235200.json  build-summary-20250718-131653.json  build-summary-20250718-131729.json  build-summary-20250718-132634.json  build-summary-20250718-132645.json
migrations/: 001_create_user_table.rollback.sql  001_create_user_table.sql  001_initial_schema.rollback.sql  001_initial_schema.sql  002_add_indexes.rollback.sql  002_add_indexes.sql  002_add_user_creation_notify.rollback.sql  002_add_user_creation_notify.sql  003_add_certificate_management.rollback.sql  003_add_certificate_management.sql  003_initial_data.rollback.sql  003_initial_data.sql  004_add_dns_records.rollback.sql  004_add_dns_records.sql  004_unified_user_schema.rollback.sql  004_unified_user_schema.sql  V1__Create_user_table.sql  V2__Add_user_creation_notify.sql  V3__Add_certificate_management.sql
scripts/: analyze_performance.py  build-containers.py  build.sh  run_performance_tests.py  run_static_tests.py
src/unified/: README.md  __init__.py  core.py
src/www/: debug_env.php  health.php  index.html
test_reports/: basic_integration_results.xml  integration_test_report_20250717_185202.txt  integration_test_results_20250717_185202.json  performance_report_20250718_084403.json  performance_report_20250718_084456.json  service_integration_results.xml
tests/: conftest_dns_mail.py  run_dns_mail_tests.py  run_integration_tests.py  test_api_endpoints.py  test_comprehensive_performance.py  test_container_builds.py  test_core.py  test_database_schema.py  test_dns_mail_integration.py  test_environment_management.py  test_integration.py  test_pytest.py  test_simple_integration.py
tests/integration/: test_data_management.py  test_simple_environments.py  test_static_environments.py
tests/performance/: __init__.py  test_container_performance.py  test_environment_performance.py
(+48 files in other folders)
